@@ -1,3 +1,9 @@
+2002-01-03  Don Porter <dgp@users.sourceforge.net>
+
+	* doc/FileSystem.3:
+	* generic/tclIOUtil.c: Updated some old uses of "fileName" to
+	new VFS terminology, "pathPtr".
+
 2002-01-03  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/basic.test (basic-39.4): Greatly simplified test while
